# compiler-dcc

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  RunComparisonTest.cmake  RunExitCodeTest.cmake  lex.yy.c  scanner.h  scanner.l  testinput.txt  testscanner.sh  testscript.sh
.github/workflows/: cmake-multi-platform.yml
src/: main.cc  scanner.l
